Adding minor fix of logs